--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "module": "es2020",
     "lib": ["es2020"],
     "baseUrl": ".",
+    "outDir": "dist",
     "paths": {
       "*": ["*", "src/*", "tests/*"]
     },
